--- a/src/index.css
+++ b/src/index.css
@@ -13,3 +13,11 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+#root {
+  width: 40%;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+  background-color: beige;
+  padding: 30px;
+}
